Fixed CSS alignments for Providers and Prescriptions Selection (#2621)

--- a/src/components/SharedModals/PrescriptionModal/styles.module.scss
+++ b/src/components/SharedModals/PrescriptionModal/styles.module.scss
@@ -1,28 +1,7 @@
-.MuiList-root {
-  :first-child {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-  :last-child {
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
+.distanceSelectContainer {
+  height: 56px,
 }
 
-.MuiListItemButton-root {
-  background-color: #dddddd !important;
-  height: auto;
-  box-shadow: inset 0px -1px 0px #cccccc;
-}
-.MuiListItemButton-root.Mui-selected,
-.MuiListItemButton-root.Mui-selected:hover {
-  background-color: #f1faff !important;
-}
-.MuiListItemButton-root:hover {
-  background-color: #f1faff !important;
-}
-
-.MuiOutlinedInput-input {
-  padding: 10px 14px !important;
-  background: white !important;
+.distanceInputBox {
+  height: 100%,
 }
